--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">iFood Clone</string>
+    <string name="e_mail">E-mail</string>
+    <string name="password">Senha</string>
+    <string name="login">Logar</string>
+    <string name="sing_up">Cadastrar</string>
+    <string name="acces">Acessar</string>
+    <string name="obrigatorio">Obrigatorio</string>
 </resources>
